--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,33 @@
 {
+  "name": "whatsapp-integration",
+  "version": "1.0.0",
+  "description": "backend for a desktop app to integrate whatsapp business with the application",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon server.js",
+    "test": "jest --watchAll --detectOpenHandles"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "axios": "^0.27.2",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
+    "fs": "0.0.1-security",
+    "mongoose": "^6.4.0",
+    "mongoose-intl-phone-number": "^1.1.1",
+    "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "jest": "^28.1.2",
+    "mongodb-memory-server": "^8.7.2",
+    "supertest": "^6.2.3"
   }
 }
