--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,57 +1,30 @@
 {
-	"name": "tallyxwhatsapp",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@headlessui/react": "^1.6.4",
-		"@heroicons/react": "^1.0.6",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^13.5.0",
-		"cross-env": "^7.0.3",
-		"react": "^18.1.0",
-		"react-cookie": "^4.1.1",
-		"react-dom": "^18.1.0",
-		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
-		"react-select": "^5.3.2",
-		"react-toastify": "^9.0.5",
-		"web-vitals": "^2.1.4"
-	},
-	"main": "public/electron.js",
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
-		"electron": "wait-on tcp:3000 && electron ."
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"autoprefixer": "^10.4.7",
-		"concurrently": "^7.2.2",
-		"electron": "^19.0.5",
-		"electron-is-dev": "^2.0.0",
-		"postcss": "^8.4.14",
-		"tailwindcss": "^3.0.24",
-		"wait-on": "^6.0.1"
-	}
+  "name": "whatsapp_business_chat_app",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "vite": "^3.2.4",
+    "vite-plugin-svgr": "^2.2.2"
+  }
 }
